--- a/piot2012cascading/ECML13_cascading.tex
+++ b/piot2012cascading/ECML13_cascading.tex
@@ -14,6 +14,8 @@
 \usepackage{latexsym}
 \usepackage{amssymb}
 \usepackage{hyperref}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \tolerance=1000
 \usepackage{amsmath}
 \usepackage{dsfont}
@@ -42,22 +44,22 @@
 
   De la même manière que pour le papier de SCIRL, l'intro est une vaste annonce du papier, avec des références pointues (sous-section, voire sous,sous-section) vers les parties du papier qui expliquent tel ou tel point en détail.
 \section{Background and notations}
-\label{sec-3}
-\begin{itemize}
-\item Parler du domaine de la prise de décision séquentielle
-\item Expliquer le problème direct, en profiter pour introduire l'équation d'évaluation de Bellman et l'équation d'optimalité de Bellman
-\begin{itemize}
-\item $RL(MDP=\{S,A,\gamma,(P),R\}) = \pi^*:S\times A \rightarrow \mathbb{R}$
-\item $\forall \pi, Q^\pi(s,a) = R(s,a) + \sum_{s'}P(s'|s,a)Q^\pi(s',\pi(s'))$
-\item $\pi^* = \arg\max_aQ^*(s,a)$
-\end{itemize}
-\item Introduire le problème inverse dans une forme mathématique relativement propre
-\begin{itemize}
-\item $IRL( MDP\backslash R = \{S,A,\gamma,(P)\} \cup \{\pi^E\} = R : S\times A \rightarrow \mathbb{R}$ telle que $\pi^E$ est optimale pour $R$
-\item Mentionner la nature mal posée du problème sans s'appesentir dessus. Préciser toutefois qu'aucune approche ne le résoud de manière mathématiquement satisfaisante à cause de ça.
-\item insister sur l'optimalité de l'expert comme hypothèse. Un expert sous optimal, c'est un autre champ de littérature, éventuellement donner deux trois refs.
-\end{itemize}
-\end{itemize}
+\label{sec:background}
+%% \begin{itemize}
+%% \item Parler du domaine de la prise de décision séquentielle
+%% \item Expliquer le problème direct, en profiter pour introduire l'équation d'évaluation de Bellman et l'équation d'optimalité de Bellman
+%% \begin{itemize}
+%% \item $RL(MDP=\{S,A,\gamma,(P),R\}) = \pi^*:S\times A \rightarrow \mathbb{R}$
+%% \item $\forall \pi, Q^\pi(s,a) = R(s,a) + \sum_{s'}P(s'|s,a)Q^\pi(s',\pi(s'))$
+%% \item $\pi^* = \arg\max_aQ^*(s,a)$
+%% \end{itemize}
+%% \item Introduire le problème inverse dans une forme mathématique relativement propre
+%% \begin{itemize}
+%% \item $IRL( MDP\backslash R = \{S,A,\gamma,(P)\} \cup \{\pi^E\} = R : S\times A \rightarrow \mathbb{R}$ telle que $\pi^E$ est optimale pour $R$
+%% \item Mentionner la nature mal posée du problème sans s'appesentir dessus. Préciser toutefois qu'aucune approche ne le résoud de manière mathématiquement satisfaisante à cause de ça.
+%% \item insister sur l'optimalité de l'expert comme hypothèse. Un expert sous optimal, c'est un autre champ de littérature, éventuellement donner deux trois refs.
+%% \end{itemize}
+%% \end{itemize}
 We frame the sequential decision problem in a \emph{Markov Decision Process} (MDP), that is a tuple $\{S,A,P,R,\gamma\}$. At each time step $t$, the agent uses the information encoded in the state $s_t\in S$ it is in to choose an action $a_t \in A$ according to a (deterministic\footnote{We restrict ourselves here to deterministic policies, but this dos not induce any loss of generality.}) \emph{policy} $\pi: S \rightarrow A$. The agent then transits to a new state $s_{t+1}\in S$ according to the markovian transition probabilities $P(s_{t+1}|s_t,a_t)$. The reward function $R : S\times A \rightarrow \mathbb{R}$ is a local measure of the quality of the control. The global quality of the control induced by a policy $\pi$, with respect to a reward $R$ is assessed by the value function $V^\pi_R \in \mathbb{R}^{|S|}$ which associates each state with the discounted cumulative reward for following policy $\pi$ from this state : $V^\pi_R(s) = \E[\sum_{t\geq 0}\gamma^tR(s_t)|s_0 = s]$. Therefore, an optimal policy $\pi^*_R$ is a policy whose value function (the optimal value function $V^*_R$) is greater than that of any other policy, for all states : $\forall \pi, \forall s \in S, V^*_R(s) \geq V^\pi_R(s)$. The stationary distribution induced by a policy $\pi$ is written $\rho_\pi,\textrm{ s.t. }\rho_\pi^TP^\pi = \rho_\pi$.
 
 The Bellman evaluation operator $T^\pi_R: \mathbb{R}^{|S|} \rightarrow  \mathbb{R}^{|S|}$ is defined by $T^\pi_RV = R + \gamma P^piV$ using the straightforward matricial notation $P\pi = (p(s'|s,\pi(s)))_{s,s' \in S}$. The Bellman optimality operator follows naturally : $T^*_RV = \max_\pi T^\pi_RV$. Both these operator are contractions. The fixed point of the Bellman evaluation operator $T^\pi_R$ is the value function of $\pi$ with respect to reward R $V^\pi_R$ ; the fixed point of the Bellman optimality operator $T^*_R$ is the optimal value function $V_R^*$ with respect to reward $R$. Optimal value function and optimal policy are also linked via the quality function $Q^\pi_R$, a state-action value function that adds a degree of freedom on the choice of the first action, formally defined by $Q^\pi_R(s,a) = T^a_Rv^\pi_R(s)$, with $a$ the policy that always returns action $a$ : the optimal policy follows a greedy mechanism with respect to its optimal quality function $\pi^*_R(s) = \argmax_aQ^*_R(s,a)$.
@@ -66,42 +68,54 @@ When the state space is too large to allow matricial representation or when the 
 
 In this work, we wish to tackle the inverse problem. We observe an expert's deterministic\footnotemark[\value{footnote}] policy $\pi^E$, assuming that there exist some unknown reward $R^E$ for which the expert is optimal. The non optimality of the expert is an interesting setting that has been discussed for example FIXME:NONOPTIMALITY but that we are not addressing here. We do not try to find this unknown reward $R^E$ but rather a non trivial reward $R$ for which the expert is also optimal. The trivial reward $0$ is a solution to this ill-posed problem (no reward means that every behavior is optimal). Because of its ill-posed nature, this expression of \emph{Inverse Reinforcement Learning} (IRL) still has to find a satisfactory solution although lots of progress have been made, see section \ref{sec:related}. 
 \section{The cascading algorithm}
-\label{sec-4}
-\begin{itemize}
-\item Mentionner (sans en parler, ce sera fait dans \hyperref[sec-7-1]{Imitation}) l'imitation. Une approche supervisée évidente est la classification, avec pour entrée un set $D_C$ de données issues de l'expert. Rappeler (expliqué pour la première fois dans \hyperref[sec-3]{Formalisme} qu'on se restreint (sans perte de généralité, le préciser) au cas des politique déterministes.
-\item Tous les classifieurs utilisent une fonction de score (je n'ai pas trouvé un seul exemple d'un classifieur qui n'en utilise pas), il s'agit juste d'un manière d'écrire les choses.
-\item Expliquer que l'on identifie le mécanisme de classification au mécanisme glouton qui régit la politique optimale (donc celle de l'expert).
-\item Sans chercher à justifier mathématiquement la chose (ce sera fait dans la partie \hyperref[sec-5]{Analyse}), expliquer qu'intuitivement l'on va identifier fonction de score du classifieur et fonction de qualité de l'expert (qui est optimale pour une certaine récompense, rappelons-le).
-\begin{itemize}
-\item Repartir de l'équation d'évaluation de Bellman pour isoler le terme $R(s,a)$ et introduire $r:S\times A\in \mathbb{R}$, la récompense issue de cette équation lorsque l'on remplace $Q^E$ par la fonction de score : $r(s,a) =q(s,a) - \sum_{\mathrm{s'}}P(s'|s,a)q(s',\pi(s')) $
-\item On estime ce terme à partir des transitions $D_R$ car les probabilités de transitions sont inconnues : $\hat r(s,a) = q(s,a)-\gamma \sum_{s'} {1\over N_{s'}}\sum_{(s,a,s',a')\in D_R}q(s',a')$
-\item La fonction de récompense est donnée par une régression sur $D_R \cup {\hat r}$.
-\end{itemize}
-\item Donner l'algorithme l'environnement \texttt{algorithm2e}
-\item Rapidement, l'étape de régression permet d'ajouter la structure du MDP au résultat de classif, en utilisant l'équation de Bellman.
-\item Bien préciser qu'il ne s'agit ici que d'une explication qualitative, ``avec les mains'', la preuve du fait que ça résoud bien le problème est donnée dans \hyperref[sec-5]{Analyse}, une démonstration sur des problèmes si complexes que l'état de l'art ne peut les résoudre (sauf SCIRL) est donnée dans \hyperref[Experience]{Experience}. Les avantages comparés sont expliqués dans \hyperref[Autres-Approches]{Autres Approches}. Enfin, des explications plus intuitives sur les mécanismes internes de l'algorithme, ainsi que des résultats expérimentaux supplémentaires sont fournis en \hyperref[sec-9]{Annexes}.
-\end{itemize}
+\label{sec:algo}
+%% \begin{itemize}
+%% \item Mentionner (sans en parler, ce sera fait dans \hyperref[sec-7-1]{Imitation}) l'imitation. Une approche supervisée évidente est la classification, avec pour entrée un set $D_C$ de données issues de l'expert. Rappeler (expliqué pour la première fois dans \hyperref[sec-3]{Formalisme} qu'on se restreint (sans perte de généralité, le préciser) au cas des politique déterministes.
+%% \item Tous les classifieurs utilisent une fonction de score (je n'ai pas trouvé un seul exemple d'un classifieur qui n'en utilise pas), il s'agit juste d'un manière d'écrire les choses.
+%% \item Expliquer que l'on identifie le mécanisme de classification au mécanisme glouton qui régit la politique optimale (donc celle de l'expert).
+%% \item Sans chercher à justifier mathématiquement la chose (ce sera fait dans la partie \hyperref[sec-5]{Analyse}), expliquer qu'intuitivement l'on va identifier fonction de score du classifieur et fonction de qualité de l'expert (qui est optimale pour une certaine récompense, rappelons-le).
+%% \begin{itemize}
+%% \item Repartir de l'équation d'évaluation de Bellman pour isoler le terme $R(s,a)$ et introduire $r:S\times A\in \mathbb{R}$, la récompense issue de cette équation lorsque l'on remplace $Q^E$ par la fonction de score : $r(s,a) =q(s,a) - \sum_{\mathrm{s'}}P(s'|s,a)q(s',\pi(s')) $
+%% \item On estime ce terme à partir des transitions $D_R$ car les probabilités de transitions sont inconnues : $\hat r(s,a) = q(s,a)-\gamma \sum_{s'} {1\over N_{s'}}\sum_{(s,a,s',a')\in D_R}q(s',a')$
+%% \item La fonction de récompense est donnée par une régression sur $D_R \cup {\hat r}$.
+%% \end{itemize}
+%% \item Donner l'algorithme l'environnement \texttt{algorithm2e}
+%% \item Rapidement, l'étape de régression permet d'ajouter la structure du MDP au résultat de classif, en utilisant l'équation de Bellman.
+%% \item Bien préciser qu'il ne s'agit ici que d'une explication qualitative, ``avec les mains'', la preuve du fait que ça résoud bien le problème est donnée dans \hyperref[sec-5]{Analyse}, une démonstration sur des problèmes si complexes que l'état de l'art ne peut les résoudre (sauf SCIRL) est donnée dans \hyperref[Experience]{Experience}. Les avantages comparés sont expliqués dans \hyperref[Autres-Approches]{Autres Approches}. Enfin, des explications plus intuitives sur les mécanismes internes de l'algorithme, ainsi que des résultats expérimentaux supplémentaires sont fournis en \hyperref[sec-9]{Annexes}.
+%% \end{itemize}
 IRL has sometimes FXME:REFIMITATION been seen as a way to cast the imitation problem, that is a way to copy the expert policy ; the reward function is then a byproduct of the analysis and not the object one is looking for. An efficient supervised way to do pure imitation is to use a classifier. The entries are the states $s_t$ and the labels are the actions $a_t$ deterministically chosen by the expert. We thus obtain a classification policy $\pi_C$.
 
-This is the first step of our algorithm. Using a dataset $D_C = {s_i,a_i=\pi^E(s_i)}_i$ we train a score-function based classifier. We can make use of any classifier whose decision rule uses a greedy mechanism with respect to a score function $q : S \times A \rightarrow \mathbb{R}$ that quantifies how well label $a\in A$ suits entry $s\in S$. Most classifiers, from M-SVM to $k$-nearest neighboors can be cast as a score-function based classifier. This allows the use of many off-the-shelf imlpementations.
+This classification operation is the first step of our algorithm, which consists in cascading two supervised approaches. Using a dataset $D_C = {s_i,a_i=\pi^E(s_i)}_i$ we train a score-function based classifier. We can make use of any classifier whose decision rule uses a greedy mechanism with respect to a score function $q : S \times A \rightarrow \mathbb{R}$ that quantifies how well label $a\in A$ suits entry $s\in S$. Most classifiers, from M-SVM to $k$-nearest neighboors can be cast as a score-function based classifier. This allows the use of many off-the-shelf imlpementations.
 
 The greedy classification mechanism $\pi_C = \argmax_a q(s,a)$ is very similar to the relation between the optimal policy in a MDP and its optimal quality function : $\pi^*_R(s) = \argmax_aQ^*_R(s,a)$. As the expert is optimal with respect to some unknown reward function $R_E$ and we seek a reward function $R$ for which it is also optimal, it is only natural to view the score function $q$ of the classifier as some kind of optimal quality function. It is not a stretch to see $\pi_C$ as an optimal policy as it has been built from $\pi^E$ which is optimal. By inversing the Bellman evaluation equation, one can express the reward as a function of the quality function : $R(s,a) = Q^*_R(s,a) - \sum_{s'}P(s'|s,a)Q^*_R(s'\pi^*(s'))$. This leave us with $r$, the reward function relative to our score/quality function $q$ : $r(s,a) =q(s,a) - \sum_{\mathrm{s'}}P(s'|s,a)q(s',\pi_C(s'))$.
 
-We wish to solve the general, or approximate IRL problem, where the transition probabilities are unknown. Our reward function $r$ must be approximated to $\hat r$ with the help of a dataset $D_R = \{s_i,a_i,s'_i\}$. This gives as many datapoints $\{\hat r(s_i,a_i) = q(s_i,a_i) - \gamma q(s',\pi_C(s'))}_i $.
+We wish to solve the general, or approximate IRL problem, where the transition probabilities are unknown. Our reward function $r$ must be approximated to $\hat r$ with the help of a dataset $D_R = \{s_i,a_i,s'_i\}$. This gives as many datapoints $\{\hat r(s_i,a_i) = q(s_i,a_i) - \gamma q(s',\pi_C(s'))\}_i$ that we then feed to a regressor to obtain $R^C$, a generalisation of $\hat r$ over the whole state-action space. The complete algorithm is given Alg. \ref{algo:cascading}.
+\begin{algorithm}%[H]
+    %\small
+  \caption{Cascading IRL algorithm}
+  \label{algo:cascading}
+  \emph{\textbf{Given}} a training set $D_C=\{(s_i,a_i=\pi^E(s_i))\}_{1\leq i \leq D}$ and another training set $D_R=\{(s_{i},a_{i},s'_{i})\}_{1\leq i \leq D'}$\;\\
+  \emph{\textbf{Train}} a score function-based classifier on $D_C$, obtaining decision rule $\pi_C$ and score function $q:S\times A \rightarrow \mathbb R$\;\\
+  \emph{\textbf{Learn}} a reward function $\hat R^C$ from the dataset $\{(s_{i},a_{i},\hat{r}_i)\}_{1\leq i \leq D'}$, $\forall (s_i,a_i,s'_i) \in D_R,\hat{r}_i=q(s_{i},a_{i})-\gamma q(s'_{i},\pi_C(s'_{i}))$\;\\
+  \emph{\textbf{Output}} the reward function $\hat R^{C}$ \;
+\end{algorithm}
+
+Cascading two supervised approaches like we do is a way to inject the MDP structure in the resolution of the problem. Indeed, mere classification only takes into account information from the expert (i.e., which actions goes with what state), but there is more to a MDP than a single policy. Using the Bellman equation in the expression of $\hat r$, we make use of the information lying in the transitions $(s,a,s')$, namely information about the transition probability $P$. The final regression step is just a way to try to generalize this information about $P$ to the whole state-action space, in order to have a well-behaved reward function. As we make direct use of the available data and do not iteratively compare some metric of the stationary distribution of policies, we do not need to solve the forward problem. This is a huge advantage, as it greatly reduce the computational and sampling cost of the method.
+
+By carefully choosing or tuning both supervised algorithm, it should possible to mitigate ill effects of a lack of data. The classification error and regression error can be acted upon with the help of the wide range of techniques available for these two well-known supervised problems, which helps control the bound we provide in Sec. \ref{sec:analysis}. The explanation in this section only is a quatitative attempt to make the reader understand the idea behind the algorithm. The analysis tackle things in a formal, yet less intuitive, way. Dire lack of data is addressed in Sec \ref{sec:experiments} where the use of an heuristic is empirically shown to be relevant. Data constraints are so high that to the best of our knowledge only one other published algorithm is able to solve the IRL problem in such conditions. Other approaches are compared with one another in Sec. \ref{sec:related}. Finally, appendices provide the reader with other experiments that exemplify the inner working of the algorithm.
+
+\section{Analysis}
+\label{sec:analysis}
 
 
-\section{Analyse}
-\label{sec-5}
-
-
-\begin{itemize}
-\item On rappelle le problème posé au début.
-\item Le théorème 1 montre que modulo un bonne classif et un bon régresseur, on résoud exactement le problème que l'on s'était posé
-\item On en fait la démo rapide (éventuellement des bouts peuvent être déportés en \st{Pologne} \hyperref[sec-9]{Annexes}).
-\item On insiste sur le fait que la récompense trouvée n'est pas triviale, on a transcendé la nature mal posée du problème.
-\item On dit un mot rapide sur la complexité en échantillon (ça dépend du classifieur et du régresseur, mais \hyperref[sec-6]{Expériences} montre qu'on est bon là dessus)
-\item ainsi que sur la complexité temporelle (ça dépend toujours, mais avec une M-SVM et un moinde carré ça prend O(quelque chose) (indice: pas beaucoup)) FIXME:compléter la complexité
-\end{itemize}
+%% \begin{itemize}
+%% \item On rappelle le problème posé au début.
+%% \item Le théorème 1 montre que modulo un bonne classif et un bon régresseur, on résoud exactement le problème que l'on s'était posé
+%% \item On en fait la démo rapide (éventuellement des bouts peuvent être déportés en \st{Pologne} \hyperref[sec-9]{Annexes}).
+%% \item On insiste sur le fait que la récompense trouvée n'est pas triviale, on a transcendé la nature mal posée du problème.
+%% \item On dit un mot rapide sur la complexité en échantillon (ça dépend du classifieur et du régresseur, mais \hyperref[sec-6]{Expériences} montre qu'on est bon là dessus)
+%% \item ainsi que sur la complexité temporelle (ça dépend toujours, mais avec une M-SVM et un moinde carré ça prend O(quelque chose) (indice: pas beaucoup)) FIXME:compléter la complexité
+%% \end{itemize}
 
 First let introduce some notations. $\pi_C$ is the classifier policy, $\epsilon_C$ is the classification error:
 \begin{equation}
@@ -165,64 +179,103 @@ If we combine all of the results, we obtain the final bound:
 Few remarks: the bound is obviously true for $\hat{R}_C$, but in this case the classifier or the regressor have bad performance which it is not likely. The algorithm and the analysis are invariant by a dilatation of $q$, so of $\Delta q$. We could normalize $\Delta q$ by imposing $\Delta q=1$ (the range of variation of $q$ induces the one of $R^C$, $\hat{R}^C$ and $V^{\pi_C}_{\hat{R^C}}$). The constant $C_*$ could be estimated a posteriori ( after $\hat{R}^C$ being calculated). We could upper bound $C_*$ by a more usual and general concentration coefficient but $C_*$ give a tighter final result (approximately, if $\hat{\pi_C}\approx\pi_E$ then $C_*=1$).
 
 In order to control $\epsilon_R$, we need a precise regression over the expert stationary distribution and for all the actions. In theory, we need to be able to sample the whole dynamic (even the non expert actions). In practice, a heuristic is used (however this heuristic is not justified by the analysis).
-Finally, if the classifier and the regressor are perfect ($\epsilon_C=\epsilon_R=0$), $\pi_E$ is the only deterministic optimal policy of $\hat{R}^C=R^C$ (the uniqueness suppose that $\forall s\in S, Card(\argmax_{a\in A}q(s,a))=1$ ).
+Finally, if the classifier and the regressor are perfect ($\epsilon_C=\epsilon_R=0$), $\pi_E$ is the only deterministic optimal policy of $\hat{R}^C=R^C$ (the uniqueness suppose that $\forall s\in S, Card(\argmax_{a\in A}q(s,a))=1$ ). This uniqueness also hint at the fact that we found a non-trivial reward (we recall that the null reward admit \emph{every} policy as optimal).
+
+The sample complexity induced by this bound depends on the sample complexity of the classification and regression subroutines. The litterature is wide enough for methods accomodating most of use cases to be found. Being able to leverage such common algorithms as multi-class classifiers and regressors is a big advantage of our cascading approach.
+
+\section{Related Work}
+\label{sec:related}
+IRL was first introduced in \cite{russell1998learning} and then formalized in \cite{ng2000algorithms}. A seminal paper, \cite{abbeel2004apprenticeship} blurs the frontier between imitation and IRL, as this algorithm outputs (mixing) policies, and not explicitely a reward (though it is possible to extract one). Other approaches with the same philosophy of finding a policy
+(through some reward function) such that its feature expectation (or
+more generally some measure of the underlying trajectories'
+distribution) matches the one of the expert policy are summarized in \cite{neu2009training}. This principle implies repeatedly solving the MDP in order to get information about the feature expectation of the policy induced by the iteratively built reward. This has a high cost, sample-wise as well as computationally. The Projection IRL (PIRL) algorithm of \cite{abbeel2004apprenticeship} is used as a benchmark in our experiments Sec.\ref{sec:experiments}.
+
+Classification and IRL have met in the past in \cite{ratliff2006maximum}, but the labels were complete optimal policies rather than actions and the inputs were MDPs (which had to be solved).
+
+Using the non trivial notion of metric in an MDP, \cite{melo2010learning} build a kernel which is used
+in a classification algorithm, showing improvements compared to a
+non-structured kernel. However, this approach is not an IRL
+algorithm, and more important assessing the metric of an MDP is a
+quite involved problem.
 
 
-\section{Expériences}
-\label{sec-6}
+Few algorithms do not require solving the direct RL problem. \cite{Dvij:2010} only applies to linearly-solvable MDPs.
+\cite{boularias:2011} uses a subgradient ascent of a utility function based on the notion of relative entropy. Importance sampling is suggested as a way to avoid solving the MDP. This requires sampling trajectories according to a non-expert policy and
+the direct problem remains at the core of the approach (even if
+solving it is avoided).
 
-\begin{itemize}
-\item La borne fournie en \hyperref[sec-5]{Analyse} mesure le degré d'optimalité de la politique de l'expert vis à vis de la nouvelle récompense. Les expériences mesurent le degré d'optimalité de l'agent (ici entendu sous forme d'agent entraîné parfaitement sur la récompense sortie par notre algorithme) vis à vis de la vraie récompense (celle de l'expert).
-\begin{itemize}
-\item On se permet de faire ça car dans notre dispositif on la connait. Ce n'est pas le cas dans la vraie vie.
-\item En pratique c'est un critère plus restrictif : formellement, si $\pi^E$ est optimale pour $R_C$, alors l'agent et l'expert ont les mêmes performances (wrt $R_C$), puisque l'agent est optimal pour $R_C$ par définition de l'agent. En revanche on regarde si l'agent est optimal pour $R_E$, ce qui est profondément ``injuste'', puisqu'on ne sait rien de $R_E$. On ne sait même pas si elle existe réellement.
-\item Il s'agit d'une métrique qu'il n'est pas possible de mesurer sur un problème réel. C'est pourquoi la démonstration est intéressente car elle parle de quelque chose que l'on peut plus facilement évaluer ; et surtout elle parle de ce que l'on s'est proposé de résoudre à la base. Ces expériences ne sont qu'une illustration.
-\end{itemize}
-\item Les résultats obtenus sur ce problème sont notamment comparés à la classif, il s'agit d'une illustration du fait que l'algorithme est capable d'extraire les infos sur $P$ contenues dans les transitions, grâce à l'équation de Bellman qui est présente (modulo deux trois manips) dans l'expression de $\hat r$. Nous avons injecté la structure du MDP dans la classification (ça me rappelle quelque chose\ldots{} ;)
-\item Le seul plot est celui du Highway (similaire à SCIRL). On enlève le Gridworld (reporté en annexe car trop d'infos pour si peu de place)
-\item On instancie avec Taskar et un moindre carré. Ceci n'a pas la moindre importance.
-\item Mentionner le fait que les autres algos ne peuvent résoudre le problème tel qu'on le pose. On s'apesentira là dessus dans \hyperref[sec-7]{Autres approches}.
-\item Expliquer que quitte à tester expérimentallement, on a choisi de s'éloigner du cadre de l'analyse pour se placer dans cadre \emph{plus difficile à gérer}, ou seules les données de l'expert sont disponibles.
-\begin{itemize}
-\item Cela implique l'usage d'une heuristique pour la régression :
-\begin{itemize}
-\item sans heuristique, c'est le choix par défauit du régresseur (i.e. initialisation à 0, à R$_{\mathrm{min}}$ ou R$_{\mathrm{max}}$) qui décidera de l'optimisme ou pessimisme de l'algo
-\item Pour éviter ça, on place nous même notre heuristique.
-\end{itemize}
-\item que l'on se contente d'expliquer à un niveau intuitif. L'analyse formelle n'a pas été effectuée, ne le sera probablement pas, on se contente de montrer qu'en pratique, ça fonctionne. Et ça fonctionne mieux que les autres algos, sauf SCIRL.
-\item Cela implique aussi d'utiliser $\pi_C$ plutôt que $a'$.
-\end{itemize}
-\item Lien avec l'analyse : on a de bons résultats, même si le classifieur n'est pas bon. Notre borne est donc très très large.
-\item La complexité en échantillons : avec 50 samples, on fait mieux que PIRL qui a accès à une matrice de taille $|S|\times|S|\times |A|$
-\item La complexité en temps : on tourne 100 fois plus rapidement que PIRL
-\end{itemize}
-\section{Autres approches}
-\label{sec-7}
+The SCIRL algorithm \cite{klein2012scirl} is able to sole the IRL problem in the same dire conditions as the cascading approach. However, it outputs a reward on the state space only, which can prove problematic if the expert relies on information about the cost of an action in a certain state. We avoid that by using a reward over the state-action space.
 
-\begin{itemize}
-\item On reprend peu ou prou la même que SCIRL et que celle du précédent papier. On profite de la mention d'une approche pour préciser en quoi la nôtre diffère.
-\end{itemize}
-\subsection{Imitation}
-\label{sec-7-1}
+%% \begin{itemize}
+%% \item On reprend peu ou prou la même que SCIRL et que celle du précédent papier. On profite de la mention d'une approche pour préciser en quoi la nôtre diffère.
+%% \end{itemize}
+%% \subsection{Imitation}
+%% \label{sec-7-1}
 
-\begin{itemize}
-\item Ce n'est pas le problème que l'on se pose, mais résoudre l'IRL peut permettre une forme fine d'imitation.
-\item La frontière est un peu floue, exemple de PIRL
-\item On peut considérer que tous les algos revus par Neu sont des algos d'imitation dans le sens où ils cherchent une proximité des $\mu$.
-\item Coincidentallement, ils ont besoin de résoudre le problème direct, pas nous.
-\end{itemize}
-\subsection{Méthodes entropiques}
-\label{sec-7-2}
+%% \begin{itemize}
+%% \item Ce n'est pas le problème que l'on se pose, mais résoudre l'IRL peut permettre une forme fine d'imitation.
+%% \item La frontière est un peu floue, exemple de PIRL
+%% \item On peut considérer que tous les algos revus par Neu sont des algos d'imitation dans le sens où ils cherchent une proximité des $\mu$.
+%% \item Coincidentallement, ils ont besoin de résoudre le problème direct, pas nous.
+%% \end{itemize}
+%% \subsection{Méthodes entropiques}
+%% \label{sec-7-2}
 
-\begin{itemize}
-\item N'ont pas besoin de résoudre le problème direct, mais ont besoin d'autres données que celles de l'expert.
-\end{itemize}
-\subsection{Autres méthodes}
-\label{sec-7-3}
+%% \begin{itemize}
+%% \item N'ont pas besoin de résoudre le problème direct, mais ont besoin d'autres données que celles de l'expert.
+%% \end{itemize}
+%% \subsection{Autres méthodes}
+%% \label{sec-7-3}
 
-\begin{itemize}
-\item parler des MDPs solvables linéairement, des papiers mentionnés par les reviewers de NIPS, et dire du bien de SCIRL
-\end{itemize}
+%% \begin{itemize}
+%% \item parler des MDPs solvables linéairement, des papiers mentionnés par les reviewers de NIPS, et dire du bien de SCIRL
+%% \end{itemize}
+\section{Experiments}
+\label{sec:experiments}
+\subsection{Criterion}
+The theoretical bound provided in Sec. \ref{sec:analysis} is about the optimality of the expert with respect to the reward function output by our algorithm (this is also the way the problem was framed in \ref{sec:background}). For the experiments, we use a somewhat more restrictive criterion : a measure of the optimality of an agent trained on the reward output by our algorithm, with respect to the "true" reward function, the reward function of the expert. We compare the mean value function with respect to $R^E$for a RL agent perfectly trained to optimize $R^C$. We do that firstly because, for once, we can. The bound we provide in the analysis is something that can be measured even if $R^E$ does not actually exist. We make use here of the fact that $R^E$ not only exists, but is known to us as we use, as an expert, a RL agent perfectly trained on a handcrafted $R^E$. The second reason why we choose this different metric in this section is because we believe the theoretical bound to be convinving, and what we wanted to illustrate here is not that the theoretical bound holds, but that under really dire sample scarcity (a case not covered by the analysis) our algorithm is well behaved given the use of heuristics.
+\subsection{Setting}
+The setting of the experiment is a driving simulator inspired from a benchmark seen in \cite{syed2008apprenticeship,syed2008game}. The agent controls a car that can switch between the three lanes of the road, go off-road on either side and modulate between three speed levels. The expert is trained to go as fast as possible (high reward) while avoiding collisions (harshly penalised) with randomly placed slower moving vehicles and avoiding going off-road (moderately penalised). Any other situation receives a null reward.  FIXME:PLUSBAVARDSURLEHIGHWAY
+
+PIRL.
+\subsection{Instanciation}
+Classif, regress, heuristique.
+\subsection{Results}
+\begin{figure}
+  \includegraphics[width=\linewidth]{"Fig3"}
+  \caption{Data is shown with mean, standard deviation, minimum and maximum value over 50 runs. The lower baseline is an agent trained on a reward generated by using the same features as the cascading approach and the classifier, but with a random vector of parameters.}
+  \label{fig:Highway cascading}
+\end{figure}
+
+Results are shown Fig.\ref{fig:Highway cascading}. It is very interesting to compare our algorithm to the behavior of a classifier alone. With \emph{the exact same data}, albeit the use of a very simple heuristics, the cascading approach demonstrate far better performance, from the start. This is a clear illustration of the fact that using the Bellman equation to construct the data fed to the regressor truly make use of the information that the transitions $(s,a,s')$ bear (we recall that the classifier only uses $(s,a)$ couples). Furthermore, the classifier whose results are diplayed here is the output of the first step of the algorithm. Although what we show on the plot is not exactly the classification error, it is closely related (if $\pi^C=\pi^E$ then the classification would have the same performance on our plot as the expert, which is not the case). This shows that our algorithm is empirically more forgiving of classification errors than our theoretical bound let us expect.
+
+PIRL is given the transition probabilities (that is, a $|S|\times |S|\times |A|$ matrix) and yet it does only slightly better than our approach with 100 samples. This also show that we are indeed very sample efficient, without having to repeatedly solve the MDP.
+
+%% \begin{itemize}
+%% \item La borne fournie en \hyperref[sec-5]{Analyse} mesure le degré d'optimalité de la politique de l'expert vis à vis de la nouvelle récompense. Les expériences mesurent le degré d'optimalité de l'agent (ici entendu sous forme d'agent entraîné parfaitement sur la récompense sortie par notre algorithme) vis à vis de la vraie récompense (celle de l'expert).
+%% \begin{itemize}
+%% \item On se permet de faire ça car dans notre dispositif on la connait. Ce n'est pas le cas dans la vraie vie.
+%% \item En pratique c'est un critère plus restrictif : formellement, si $\pi^E$ est optimale pour $R_C$, alors l'agent et l'expert ont les mêmes performances (wrt $R_C$), puisque l'agent est optimal pour $R_C$ par définition de l'agent. En revanche on regarde si l'agent est optimal pour $R_E$, ce qui est profondément ``injuste'', puisqu'on ne sait rien de $R_E$. On ne sait même pas si elle existe réellement.
+%% \item Il s'agit d'une métrique qu'il n'est pas possible de mesurer sur un problème réel. C'est pourquoi la démonstration est intéressente car elle parle de quelque chose que l'on peut plus facilement évaluer ; et surtout elle parle de ce que l'on s'est proposé de résoudre à la base. Ces expériences ne sont qu'une illustration.
+%% \end{itemize}
+%% \item Les résultats obtenus sur ce problème sont notamment comparés à la classif, il s'agit d'une illustration du fait que l'algorithme est capable d'extraire les infos sur $P$ contenues dans les transitions, grâce à l'équation de Bellman qui est présente (modulo deux trois manips) dans l'expression de $\hat r$. Nous avons injecté la structure du MDP dans la classification (ça me rappelle quelque chose\ldots{} ;)
+%% \item Le seul plot est celui du Highway (similaire à SCIRL). On enlève le Gridworld (reporté en annexe car trop d'infos pour si peu de place)
+%% \item On instancie avec Taskar et un moindre carré. Ceci n'a pas la moindre importance.
+%% \item Mentionner le fait que les autres algos ne peuvent résoudre le problème tel qu'on le pose. On s'apesentira là dessus dans \hyperref[sec-7]{Autres approches}.
+%% \item Expliquer que quitte à tester expérimentallement, on a choisi de s'éloigner du cadre de l'analyse pour se placer dans cadre \emph{plus difficile à gérer}, ou seules les données de l'expert sont disponibles.
+%% \begin{itemize}
+%% \item Cela implique l'usage d'une heuristique pour la régression :
+%% \begin{itemize}
+%% \item sans heuristique, c'est le choix par défauit du régresseur (i.e. initialisation à 0, à R$_{\mathrm{min}}$ ou R$_{\mathrm{max}}$) qui décidera de l'optimisme ou pessimisme de l'algo
+%% \item Pour éviter ça, on place nous même notre heuristique.
+%% \end{itemize}
+%% \item que l'on se contente d'expliquer à un niveau intuitif. L'analyse formelle n'a pas été effectuée, ne le sera probablement pas, on se contente de montrer qu'en pratique, ça fonctionne. Et ça fonctionne mieux que les autres algos, sauf SCIRL.
+%% \item Cela implique aussi d'utiliser $\pi_C$ plutôt que $a'$.
+%% \end{itemize}
+%% \item Lien avec l'analyse : on a de bons résultats, même si le classifieur n'est pas bon. Notre borne est donc très très large.
+%% \item La complexité en échantillons : avec 50 samples, on fait mieux que PIRL qui a accès à une matrice de taille $|S|\times|S|\times |A|$
+%% \item La complexité en temps : on tourne 100 fois plus rapidement que PIRL
+%% \end{itemize}
 \section{Conclusion}
 \label{sec-8}
 
@@ -255,5 +308,8 @@ Finally, if the classifier and the regressor are perfect ($\epsilon_C=\epsilon_R
 \begin{itemize}
 \item Si on a le temps : faire conduire quelqu'un puis lancer l'imitation, voir si on reproduit les consignes données à l'opérateur humain, qui aura eu la bonté de faire quelques erreurs dans l'exécution. Ca permet de voir le comportement en cas d'expert sous optimal et de taire les questions à ce sujet.
 \end{itemize}
+
+\bibliographystyle{plain}
+\bibliography{Biblio}
 
 \end{document}
